[gd_scene load_steps=7 format=3 uid="uid://db3u5k215vpxf"]

[ext_resource type="Theme" uid="uid://536c44v6j1rj" path="res://toolbar.tres" id="1_s4d5a"]
[ext_resource type="Script" uid="uid://cm8twomwplcl0" path="res://top_bar.gd" id="2_ermxm"]
[ext_resource type="Texture2D" uid="uid://c77cxyxl154xb" path="res://Assets/tokens.svg" id="2_fydeb"]
[ext_resource type="Texture2D" uid="uid://eq4twvtwbyt4" path="res://Assets/dice_3D_detailed.svg" id="3_fydeb"]
[ext_resource type="AudioStream" uid="uid://bqirjduecpm0o" path="res://Assets/sfx/button assorted 3.wav" id="5_yqy6c"]
[ext_resource type="AudioStream" uid="uid://qdauqohxghfy" path="res://Assets/sfx/error2.wav" id="6_jdy2n"]

[node name="TopBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_s4d5a")
script = ExtResource("2_ermxm")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Score" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Score: 0/666"

[node name="CashOut" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
disabled = true
text = "Cash Out"
icon = ExtResource("2_fydeb")
icon_alignment = 2

[node name="Roll" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
disabled = true
text = "Roll"
icon = ExtResource("3_fydeb")
alignment = 0
icon_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="Bust" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Bust"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 49.0
grow_horizontal = 2
text = "BUST"

[node name="Label2" type="Label" parent="Bust"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -24.5
offset_right = 120.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "Try another round"

[node name="newRound" type="Button" parent="Bust"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.5
offset_top = -57.0
offset_right = 34.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.769374, 0.548187, 0, 1)
text = "-Ok-"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yqy6c")

[node name="error" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jdy2n")

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/CashOut" to="." method="_on_cash_out_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Roll" to="." method="_on_roll_pressed"]
